# CogniHire

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_final.py  pyproject.toml  submission_metadata_template.yaml  team_PixelPioneers.csv  tt.py  tt2.py
src/: __init__.py  config.py  jd_parser.py  loader.py  pipeline.py  precompute.py  ranker.py  res_gen.py  sandbox.py  sieve_engine.py  text_builder.py  trajectory_engine.py
tests/: day1.py
